--- a/Develop/client/package.json
+++ b/Develop/client/package.json
@@ -17,7 +17,7 @@
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",    
-    "@apollo/server": "^4.7.1",
+    "@apollo/client": "^3.7.14",
     "graphql": "^16.6.0"
   },
   "devDependencies": {
